--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy": "gh-pages -d dist"  // تأكد من إضافة هذا السطر هنا
+    "deploy": "gh-pages -d dist"  
   },
   "dependencies": {
     "lucide-react": "^0.344.0",
